--- a/composer.json
+++ b/composer.json
@@ -6,5 +6,7 @@
     },
     "autoload": {
         "psr-0": { "Onesky\\Api\\": "./src" }
-    }
+    },
+    "license": "MIT",
+    "homepage": "https://github.com/onesky/api-library-php5"
 }
