--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,6 @@
 {
     "name": "onesky/api-library-php5",
+    "description": "PHP interface for OneSky Platform API",
     "type": "library",
     "require-dev": {
         "phpunit/phpunit": "4.3.*"
