--- a/.travis.yml
+++ b/.travis.yml
@@ -12,3 +12,7 @@ before_script:
 
 script:
     - vendor/bin/phpunit --coverage-clover=coverage.clover
+
+after_script:
+    - wget https://scrutinizer-ci.com/ocular.phar
+    - php ocular.phar code-coverage:upload --format=php-clover coverage.clover
